--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ const curriculum = [
 
 // --- БАЗА ДАННЫХ ПРЕПОДАВАТЕЛЕЙ ---
 const teacherDatabase = [
-    { year: "2021/2022", course: 1, semester: 2, subject: "Введение в специальность", bbName: "2021_Введение в специальность_Филимонова Татьяна Сергеевна", contact: "TSFilimonova@usurt.ru" },
+    { year: "2021/2022", course: 1, semester: 2, subject: "Введение в специальность", bbName: "2021_Введение в специальность_Филимонова Татьяна Сергеевна", contact: "TSFilimonova@usurt.ru, 89122134001" },
     { year: "2021/2022", course: 1, semester: 2, subject: "Социальные и психологические аспекты профессиональной деятельности", bbName: "2021_Социальные и психологические аспекты профессиональной деятельности_Романова Елена Александровна", contact: "EARomanova@usurt.ru" },
     { year: "2021/2022", course: 1, semester: 2, subject: "Физическая культура и спорт", bbName: "2021_Физическая культура и спорт_ Евсеев Александр Владимирович", contact: "AVEvseev@usurt.ru, 221-25-51, 245-98-75, 245-98-54" },
     
@@ -421,12 +421,12 @@ const teacherDatabase = [
     { year: "2022/2023", course: 2, semester: 2, subject: "Сетевые элементы инфокоммуникационной системы", bbName: "2022_Сетевые элементы инфокоммуникационной системы_Богданова Елена Сергеевна", contact: "EBogdanova@usurt.ru" },
     { year: "2022/2023", course: 2, semester: 2, subject: "Системы автоматизированного проектирования", bbName: "2022_Системы автоматизированного проектирования_Максимова Инна Николаевна", contact: "IMaksimova@usurt.ru, maksimova2607@mail.ru, 89058034056" },
 
-    { year: "2023/2024", course: 3, semester: 1, subject: "Архитектура информационных систем", bbName: "2023_Архитектура информационных систем_Филимонова Татьяна Сергеевна", contact: "TSFilimonova@usurt.ru" },
+    { year: "2023/2024", course: 3, semester: 1, subject: "Архитектура информационных систем", bbName: "2023_Архитектура информационных систем_Филимонова Татьяна Сергеевна", contact: "TSFilimonova@usurt.ru, 89122134001" },
     { year: "2023/2024", course: 3, semester: 1, subject: "Информационная безопасность и защита информации", bbName: "2023_Информационная безопасность и защита информации_Зырянова Татьяна Юрьевна", contact: "TZyryanova@usurt.ru, 221-24-10" },
     { year: "2023/2024", course: 3, semester: 1, subject: "Физическая культура и спорт (элективные дисциплины (модули))", bbName: "2023_Физическая культура и спорт (элективные дисциплины (модули))_Евсеев Александр Владимирович", contact: "AVEvseev@usurt.ru, 221-25-51, 245-98-75, 245-98-54" },
 
     { year: "2023/2024", course: 3, semester: 2, subject: "Операционные системы", bbName: "2023_Операционные системы_Гузенкова Елена Алексеевна", contact: "EGuzenkova@usurt.ru, https://vk.com/guzenkovaea" },
-    { year: "2023/2024", course: 3, semester: 2, subject: "Основы теории управления и систем", bbName: "2023_Основы теории управления и систем_Филимонова Татьяна Сергеевна", contact: "TSFilimonova@usurt.ru" },
+    { year: "2023/2024", course: 3, semester: 2, subject: "Основы теории управления и систем", bbName: "2023_Основы теории управления и систем_Филимонова Татьяна Сергеевна", contact: "TSFilimonova@usurt.ru, 89122134001" },
     { year: "2023/2024", course: 3, semester: 2, subject: "Правовые аспекты профессиональной деятельности", bbName: "2023_Правовые аспекты профессиональной деятельности_Блохин Владимир Сергеевич", contact: "VBlohin@usurt.ru" },
     { year: "2023/2024", course: 3, semester: 2, subject: "Системы передачи информации (Курсовой проект)", bbName: "2023_Системы передачи информации_Русакова Елена Александровна", contact: "ERoussakova@usurt.ru, relaine@mail.ru" },
     
@@ -438,7 +438,7 @@ const teacherDatabase = [
 
     { year: "2024/2025", course: 4, semester: 2, subject: "Администрирование информационных систем", bbName: "2024_Администрирование информационных систем_Гузенкова Елена Алексеевна", contact: "EGuzenkova@usurt.ru, https://vk.com/guzenkovaea" },
     { year: "2024/2025", course: 4, semester: 2, subject: "Организация производства", bbName: "2024_Организация производства_Кокшаров Владимир Алексеевич", contact: "VKoksharov@usurt.ru" },
-    { year: "2024/2025", course: 4, semester: 2, subject: "Производственная практика (технологическая (проектно-технологическая) практика)", bbName: "2024_Учебная и Производственная практики__АТиС_на_ж.д._тр-те_Филимонова Татьяна Сергеевна", contact: "TSFilimonova@usurt.ru", explicitTeacher: "Филимонова Татьяна Сергеевна" }
+    { year: "2024/2025", course: 4, semester: 2, subject: "Производственная практика (технологическая (проектно-технологическая) практика)", bbName: "2024_Учебная и Производственная практики__АТиС_на_ж.д._тр-те_Филимонова Татьяна Сергеевна", contact: "TSFilimonova@usurt.ru, 89122134001", explicitTeacher: "Филимонова Татьяна Сергеевна" }
 ];
 
 // --- ДАННЫЕ СТУДЕНТОВ ---
@@ -815,4 +815,3 @@ updateNavUI();
 </body>
 
 </html>
-
